--- a/src/components/sideBar/styles.scss
+++ b/src/components/sideBar/styles.scss
@@ -1,7 +1,7 @@
 @import "../../theme/base/variables.scss";
 
 
-.title_menu{
+.menu_fonts{
     box-sizing: border-box;
     font-family: spotify_font, Helvetica, Arial, sans-serif;
     -webkit-tap-highlight-color: transparent;
@@ -9,14 +9,15 @@
     margin-bottom: 0px;
     font-size: 0.8125rem;
     line-height: 1rem;
-    font-weight: 700;
+    font-weight: 400;
     color: #b3b3b3;
 }
 .navbar_wrapper{
     width: $nav-bar-width;
-    height: 100vh;
+    height: 85vh;
     background-color: $main-color;
     padding-top: 24px;
+    position: relative;
     .logo{
         padding: 0 24px;
         margin-bottom: 18px;
@@ -92,6 +93,30 @@
                 .container_icon{
                     color: #fff;
                 }
+            }
+        }
+    }
+    .menu_separator{
+        background-color: #282828;
+        border: none;
+        height: 1px;
+        margin: 8px 24px 0 24px;
+        min-height: 1px;
+    }
+    .app_install{
+        padding: 0 8px;
+        position: absolute;
+        bottom: 0;
+        .app_install_link{
+            padding-right: 20px;
+            align-items: center;
+            cursor: pointer;
+            display: flex;
+            gap: 16px;
+            height: 40px;
+            padding: 0 16px;
+            &:hover{
+                color: #fff;
             }
         }
     }
