شي حاجة اللخر شي حاجة اللهم بارك

--- a/src/theme/base/_fonts.scss
+++ b/src/theme/base/_fonts.scss
@@ -2,3 +2,11 @@
     font-family: 'spotify_font';
     src: url('../../app/assets/fonts/CircularStd-Medium.otf') format("opentype");
 }
+@font-face {
+    font-family: 'spotify_font_book';
+    src: url('../../app/assets/fonts/CircularStd-Book.otf') format("opentype");
+}
+@font-face {
+    font-family: 'spotify_font_black';
+    src: url('../../app/assets/fonts/CircularStd-Black.otf') format("opentype");
+}
