--- a/src/components/playlists/styles.scss
+++ b/src/components/playlists/styles.scss
@@ -33,11 +33,106 @@
             letter-spacing: -0.04em;
             text-transform: none;
             box-sizing: border-box;
-            font-family: spotify_font-circular, Helvetica, Arial, sans-serif;
+            font-family: spotify_font_black, Helvetica, Arial, sans-serif;
             margin-top: 0px;
             margin-bottom: 0px;
-            font-weight: 700;
+            font-weight: 600;
             color: var(#fff,#000000);
+            cursor: pointer;
+            a:hover{
+                text-decoration: underline;
+            }
+        }
+    }
+    .grid_container{
+        grid-gap: 0px 24px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+        grid-auto-rows: 0;
+        grid-template-rows: 1fr;
+        overflow-y: hidden;
+        .grid_item{
+            background: #171717;
+            border-radius: calc(var(--card-container-border-radius) + 2px);
+            -ms-flex: 1;
+            flex: 1;
+            isolation: isolate;
+            padding: 16px;
+            position: relative;
+            transition: background-color .3s ease;
+            height: 100%;
+            .item_picture{
+                margin-bottom: 16px;
+                position: relative;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px 10px 0px 0;
+                }
+                button{
+                    background-color: #1db954;
+                    color: #fff;
+                    right: 8px;
+                    border-radius: 500px;
+                    bottom: 8px;
+                    -webkit-box-shadow: 0 8px 8px rgb(0 0 0 / 30%);
+                    box-shadow: 0 8px 8px rgb(0 0 0 / 30%);
+                    opacity: 0;
+                    pointer-events: none;
+                    position: absolute;
+                    -webkit-transform: translateY(8px);
+                    transform: translateY(8px);
+                    -webkit-transition: all .3s ease;
+                    transition: all .3s ease;
+                    z-index: 2;
+                    align-items: center;
+                    display: flex;
+                    font-size: 8px;
+                    height: 40px;
+                    justify-content: center;
+                    min-width: 40px;
+                    padding: 0;
+                    position: absolute;
+                    transition: transform 33ms cubic-bezier(.3,0,0,1),-webkit-transform 33ms cubic-bezier(.3,0,0,1);
+                    width: 40px;
+                }
+            }
+            .item_info{
+                position: relative;
+                z-index: 1;
+                display: inline-block;
+                max-width: 100%;
+                vertical-align: middle;
+                overflow: hidden;
+                box-sizing: border-box;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                a{
+                    font-family: spotify_font_black, Helvetica, Arial, sans-serif;
+                    font-size: 1rem;
+                    line-height: 1.5rem;
+                    font-weight: 700;
+                    white-space: nowrap;
+                }
+                .item_desc{
+                    box-sizing: border-box;
+                    font-family: spotify_font, Helvetica, Arial, sans-serif;
+                    -webkit-tap-highlight-color: transparent;
+                    font-size: 0.8125rem;
+                    line-height: 1rem;
+                    font-weight: 400;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    display: -webkit-box;
+                    margin-top: 4px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    color: #a7a7a7;
+                }
+            }
+            &:hover{
+                background: #222222;
+            }
         }
     }
 }
